--- a/part3/coursedata/package.json
+++ b/part3/coursedata/package.json
@@ -6,8 +6,13 @@
     "scripts": {
         "start": "node index.js",
         "dev": "nodemon index.js",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "build:ui": "rm -rf build && cd ../../part2/coursedata && npm run build && cp -r build ../../part3/coursedata",
+        "deploy": "fly deploy",
+        "deploy:full": "npm run build:ui && npm run deploy",
+        "logs:prod": "fly logs"
     },
+    "proxy": "http://localhost:3001",
     "author": "",
     "license": "ISC",
     "dependencies": {
