--- a/part4/coursedata/package.json
+++ b/part4/coursedata/package.json
@@ -11,7 +11,11 @@
         "deploy": "fly deploy",
         "deploy:full": "npm run build:ui && npm run deploy",
         "logs:prod": "fly logs",
-        "lint": "eslint ."
+        "lint": "eslint .",
+        "test": "jest --verbose"
+    },
+    "jest": {
+        "testEnvironment": "node"
     },
     "proxy": "http://localhost:3001",
     "author": "",
@@ -27,6 +31,7 @@
         "eslint": "^8.45.0",
         "eslint-config-airbnb-base": "^15.0.0",
         "eslint-plugin-import": "^2.27.5",
+        "jest": "^29.6.1",
         "nodemon": "^3.0.1"
     }
 }
