--- a/part4/bloglist/backend/package.json
+++ b/part4/bloglist/backend/package.json
@@ -8,7 +8,7 @@
         "dev": "nodemon index.js",
         "build:ui": "rm -rf build && cd ../frontend && npm run build && cp -r build ../backend",
         "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "jest --verbose"
     },
     "author": "",
     "license": "ISC",
@@ -19,6 +19,7 @@
         "mongoose": "^7.4.0"
     },
     "devDependencies": {
+        "jest": "^29.6.1",
         "nodemon": "^3.0.1"
     }
 }
