--- a/part4/coursedata/package.json
+++ b/part4/coursedata/package.json
@@ -4,15 +4,14 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "node index.js",
-        "dev": "nodemon index.js",
-        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "cross-env NODE_ENV=production node index.js",
+        "dev": "cross-env NODE_ENV=development nodemon index.js",
+        "test": "cross-env NODE_ENV=test jest --verbose --runInBand",
         "build:ui": "rm -rf build && cd ../../part2/coursedata && npm run build && cp -r build ../../part3/coursedata",
         "deploy": "fly deploy",
         "deploy:full": "npm run build:ui && npm run deploy",
         "logs:prod": "fly logs",
-        "lint": "eslint .",
-        "test": "jest --verbose"
+        "lint": "eslint ."
     },
     "jest": {
         "testEnvironment": "node"
@@ -28,6 +27,7 @@
     },
     "devDependencies": {
         "@flydotio/dockerfile": "^0.3.3",
+        "cross-env": "^7.0.3",
         "eslint": "^8.45.0",
         "eslint-config-airbnb-base": "^15.0.0",
         "eslint-plugin-import": "^2.27.5",
