--- a/part4/coursedata/package.json
+++ b/part4/coursedata/package.json
@@ -14,7 +14,8 @@
         "lint": "eslint ."
     },
     "jest": {
-        "testEnvironment": "node"
+        "testEnvironment": "node",
+        "globalTeardown": "./tests/teardown.js"
     },
     "proxy": "http://localhost:3001",
     "author": "",
@@ -32,6 +33,7 @@
         "eslint-config-airbnb-base": "^15.0.0",
         "eslint-plugin-import": "^2.27.5",
         "jest": "^29.6.1",
-        "nodemon": "^3.0.1"
+        "nodemon": "^3.0.1",
+        "supertest": "^6.3.3"
     }
 }
