--- a/part4/bloglist/backend/package.json
+++ b/part4/bloglist/backend/package.json
@@ -4,11 +4,11 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "node index.js",
-        "dev": "nodemon index.js",
+        "start": "cross-env NODE_ENV=production node index.js",
+        "dev": "cross-env NODE_ENV=development nodemon index.js",
         "build:ui": "rm -rf build && cd ../frontend && npm run build && cp -r build ../backend",
         "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push",
-        "test": "jest --verbose"
+        "test": "cross-env NODE_ENV=test jest --verbose --runInBand"
     },
     "author": "",
     "license": "ISC",
@@ -19,7 +19,13 @@
         "mongoose": "^7.4.0"
     },
     "devDependencies": {
+        "cross-env": "^7.0.3",
         "jest": "^29.6.1",
-        "nodemon": "^3.0.1"
+        "nodemon": "^3.0.1",
+        "supertest": "^6.3.3"
+    },
+    "jest": {
+        "testEnvironment": "node",
+        "globalTeardown": "./tests/teardown.js"
     }
 }
